// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SkeletonCard> renders with 10 lines 1`] = `
<div
  className="Van-SkeletonBodyText"
>
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
</div>
`;

exports[`<SkeletonCard> renders with specific attributes 1`] = `
<div
  className="Van-SkeletonBodyText"
  data-id="0"
>
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
</div>
`;

exports[`<SkeletonCard> renders with specific className 1`] = `
<div
  className="Van-SkeletonBodyText my-class"
>
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
</div>
`;

exports[`<SkeletonCard> renders without params 1`] = `
<div
  className="Van-SkeletonBodyText"
>
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
  <div
    className="Van-SkeletonBodyText-line"
  />
</div>
`;
